src/main/java/antlr/gen/math/MathParser.java
// Generated from /work/github/Test/src/main/java/antlr/Math.g4 by ANTLR 4.5.3
package antlr.gen.math;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MathParser extends Parser {
	
	static {
		RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
	}
	
	protected static final DFA[]                  _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final    int
												  T__0                = 1, T__1 = 2, T__2 = 3, MUL = 4, DIV = 5, ADD = 6, SUB = 7, ID = 8, INT = 9, NEWLINE = 10,
			WS                                                        = 11;
	public static final int
			RULE_prog = 0, RULE_stat = 1, RULE_expr = 2;
	public static final String[] ruleNames = {
			"prog", "stat", "expr"
	};
	
	private static final String[]   _LITERAL_NAMES  = {
			null, "'='", "'('", "')'", "'*'", "'/'", "'+'", "'-'"
	};
	private static final String[]   _SYMBOLIC_NAMES = {
			null, null, null, null, "MUL", "DIV", "ADD", "SUB", "ID", "INT", "NEWLINE",
			"WS"
	};
	public static final  Vocabulary VOCABULARY      = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);
	
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}
			
			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}
	
	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}
	
	@Override
	
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}
	
	@Override
	public String getGrammarFileName() {
		return "Math.g4";
	}
	
	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}
	
	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}
	
	@Override
	public ATN getATN() {
		return _ATN;
	}
	
	public MathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}
	
	public static class ProgContext extends ParserRuleContext {
		
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class, i);
		}
		
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		
		@Override
		public int getRuleIndex() {
			return RULE_prog;
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterProg(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitProg(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(7);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(6);
							stat();
						}
					}
					setState(9);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << ID) | (1L << INT) | (1L << NEWLINE))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}
	
	public static class StatContext extends ParserRuleContext {
		
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		
		@Override
		public int getRuleIndex() {
			return RULE_stat;
		}
		
		public StatContext() {
		}
		
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	
	public static class BlankContext extends StatContext {
		
		public TerminalNode NEWLINE() {
			return getToken(MathParser.NEWLINE, 0);
		}
		
		public BlankContext(StatContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterBlank(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitBlank(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitBlank(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class PrintExprContext extends StatContext {
		
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}
		
		public TerminalNode NEWLINE() {
			return getToken(MathParser.NEWLINE, 0);
		}
		
		public PrintExprContext(StatContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterPrintExpr(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitPrintExpr(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitPrintExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class AssignContext extends StatContext {
		
		public TerminalNode ID() {
			return getToken(MathParser.ID, 0);
		}
		
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}
		
		public TerminalNode NEWLINE() {
			return getToken(MathParser.NEWLINE, 0);
		}
		
		public AssignContext(StatContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterAssign(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitAssign(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(20);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
				case 1:
					_localctx = new PrintExprContext(_localctx);
					enterOuterAlt(_localctx, 1);
				{
					setState(11);
					expr(0);
					setState(12);
					match(NEWLINE);
				}
				break;
				case 2:
					_localctx = new AssignContext(_localctx);
					enterOuterAlt(_localctx, 2);
				{
					setState(14);
					match(ID);
					setState(15);
					match(T__0);
					setState(16);
					expr(0);
					setState(17);
					match(NEWLINE);
				}
				break;
				case 3:
					_localctx = new BlankContext(_localctx);
					enterOuterAlt(_localctx, 3);
				{
					setState(19);
					match(NEWLINE);
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}
	
	public static class ExprContext extends ParserRuleContext {
		
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		
		@Override
		public int getRuleIndex() {
			return RULE_expr;
		}
		
		public ExprContext() {
		}
		
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	
	public static class ParensContext extends ExprContext {
		
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}
		
		public ParensContext(ExprContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterParens(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitParens(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class MulDivContext extends ExprContext {
		
		public Token op;
		
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}
		
		public MulDivContext(ExprContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterMulDiv(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitMulDiv(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class AddSubContext extends ExprContext {
		
		public Token op;
		
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}
		
		public AddSubContext(ExprContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterAddSub(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitAddSub(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class IdContext extends ExprContext {
		
		public TerminalNode ID() {
			return getToken(MathParser.ID, 0);
		}
		
		public IdContext(ExprContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterId(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitId(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public static class IntContext extends ExprContext {
		
		public TerminalNode INT() {
			return getToken(MathParser.INT, 0);
		}
		
		public IntContext(ExprContext ctx) {
			copyFrom(ctx);
		}
		
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).enterInt(this);
		}
		
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MathListener) ((MathListener) listener).exitInt(this);
		}
		
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MathVisitor) return ((MathVisitor<? extends T>) visitor).visitInt(this);
			else return visitor.visitChildren(this);
		}
	}
	
	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}
	
	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx   = _ctx;
		int               _parentState = getState();
		ExprContext       _localctx    = new ExprContext(_ctx, _parentState);
		ExprContext       _prevctx     = _localctx;
		int               _startState  = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(29);
				switch (_input.LA(1)) {
					case INT: {
						_localctx = new IntContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						
						setState(23);
						match(INT);
					}
					break;
					case ID: {
						_localctx = new IdContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(24);
						match(ID);
					}
					break;
					case T__1: {
						_localctx = new ParensContext(_localctx);
						_ctx = _localctx;
						_prevctx = _localctx;
						setState(25);
						match(T__1);
						setState(26);
						expr(0);
						setState(27);
						match(T__2);
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
				_ctx.stop = _input.LT(-1);
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null) triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							setState(37);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
								case 1: {
									_localctx = new MulDivContext(new ExprContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expr);
									setState(31);
									if (!(precpred(_ctx, 5)))
										throw new FailedPredicateException(this, "precpred(_ctx, 5)");
									setState(32);
									((MulDivContext) _localctx).op = _input.LT(1);
									_la = _input.LA(1);
									if (!(_la == MUL || _la == DIV)) {
										((MulDivContext) _localctx).op = (Token) _errHandler.recoverInline(this);
									} else {
										consume();
									}
									setState(33);
									expr(6);
								}
								break;
								case 2: {
									_localctx = new AddSubContext(new ExprContext(_parentctx, _parentState));
									pushNewRecursionContext(_localctx, _startState, RULE_expr);
									setState(34);
									if (!(precpred(_ctx, 4)))
										throw new FailedPredicateException(this, "precpred(_ctx, 4)");
									setState(35);
									((AddSubContext) _localctx).op = _input.LT(1);
									_la = _input.LA(1);
									if (!(_la == ADD || _la == SUB)) {
										((AddSubContext) _localctx).op = (Token) _errHandler.recoverInline(this);
									} else {
										consume();
									}
									setState(36);
									expr(5);
								}
								break;
							}
						}
					}
					setState(41);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	
	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
			case 2:
				return expr_sempred((ExprContext) _localctx, predIndex);
		}
		return true;
	}
	
	private boolean expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
			case 0:
				return precpred(_ctx, 5);
			case 1:
				return precpred(_ctx, 4);
		}
		return true;
	}
	
	public static final ATN    _ATN           =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}